--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/main.css">
     <div class="bg-slate-900">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" charset="utf-8">
         <title>HI</title>
