--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
       <input class="w-full px-3 py-2 mb-3 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" id="pw" name="pw" type="password" placeholder="*******">
     </div>
     <div class="flex items-center justify-between">
-      <button class="px-4 py-2 font-semibold text-white bg-blue-500 text-md rounded-md shadow-sm hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-indigo-500 ease-in-out delay-150 duration-300" type="submit">Sign In</button>
+      <button class="px-4 py-2 font-semibold text-white bg-blue-500 text-md rounded-md shadow-sm hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-indigo-500 ease-in-out duration-150" type="submit">Sign In</button>
     </div>
   </form>
   <p class="text-xs text-center text-gray-500">&copy;aaaaaaaaaa</p>
