Use content-evenly instead of placing randomly

--- a/html/register.html
+++ b/html/register.html
@@ -1,7 +1,7 @@
 <html>
 <link rel="stylesheet" href="css/main.css">
 <body>
-<div class="w-full h-screen max-w-xs">
+<div class="w-full h-screen max-w-xs content-evenly">
   <form action="/registapi" class="px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-md">
     <div class="mb-4">
       <label class="block mb-2 text-sm font-bold text-gray-700" for="id">Username</label>
