--- a/html/login.html
+++ b/html/login.html
@@ -2,17 +2,17 @@
 <link rel="stylesheet" href="css/main.css">
 <body>
 <div class="h-screen flex flex-col items-center justify-center">
-  <form action="/loginapi" class="px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-md">
+  <form action="/loginapi" class="px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-lg">
     <div class="mb-4">
       <label class="block mb-2 text-sm font-bold text-gray-700" for="id">Username</label>
-      <input class="w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" id="id" name="id" type="text" placeholder="Username">
+      <input class="input input-bordered w-full max-w-xs shadow-md" id="id" name="id" type="text" placeholder="Username">
     </div>
     <div class="mb-6">
       <label class="block mb-2 text-sm font-bold text-gray-700" for="pw">Password</label>
-      <input class="w-full px-3 py-2 mb-3 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline" id="pw" name="pw" type="password" placeholder="*******">
+      <input class="input input-bordered w-full max-w-xs shadow-md" id="pw" name="pw" type="password" placeholder="*******">
     </div>
     <div class="flex items-center justify-between">
-        <button class="px-4 py-2 font-semibold text-white bg-blue-500 text-md rounded-md shadow-sm hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-indigo-500 ease-in-out duration-[200ms]" type="submit">Sign In</button>
+        <button class="btn btn-outline btn-accent hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-indigo-500 ease-in-out duration-[200ms]" type="submit">Sign In</button>
     </div>
   </form>
   <p class="text-xs text-center text-gray-500">&copy;aaaaaaaaaa</p>
