Fix register.html "Sign In"

--- a/html/register.html
+++ b/html/register.html
@@ -12,7 +12,7 @@
       <input class="input input-bordered w-full max-w-xs shadow-md" id="pw" name="pw" type="password" placeholder="*******" required minlength="7" maxlength="15">
     </div>
     <div class="flex items-center justify-between">
-        <button class="btn btn-outline btn-primary hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-primary ease-in-out duration-[200ms]" type="submit">Sign In</button>
+        <button class="btn btn-outline btn-primary hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-primary ease-in-out duration-[200ms]" type="submit">Sign Up</button>
     </div>
   </form>
   <p class="text-xs text-center text-gray-500">&copy;aaaaaaaaaa</p>
