--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="css/main.css">
-    <div class="bg-slate-900">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" charset="utf-8">
-        <title>HI</title>
-        <script type="text/javascript"></script>
-        <h1 class="text-slate-300 font-extrabold">OwO</h1>
-    </div>
-</head>
-<body>
-</body>
+       <head>
+              <link rel="stylesheet" href="css/main.css" />
+              <div class="bg-slate-900">
+                     <meta
+                            name="viewport"
+                            content="width=device-width, initial-scale=1, user-scalable=yes"
+                            charset="utf-8"
+                     />
+                     <title>HI</title>
+                     <script type="text/javascript"></script>
+                     <h1 class="text-slate-300 font-extrabold">OwO</h1>
+              </div>
+       </head>
+       <body></body>
 </html>
