Format class in tailwind

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
                      />
                      <title>HI</title>
                      <script type="text/javascript"></script>
-                     <h1 class="text-slate-300 font-extrabold">OwO</h1>
+                     <h1 class="font-extrabold text-slate-300">OwO</h1>
               </div>
        </head>
        <body></body>
