--- a/html/login.html
+++ b/html/login.html
@@ -1,14 +1,14 @@
 <html>
        <link rel="stylesheet" href="css/main.css" />
        <body>
-              <div class="h-screen flex flex-col items-center justify-center">
+              <div class="flex h-screen flex-col items-center justify-center">
                      <form
                             action="/loginapi"
-                            class="px-8 pt-6 pb-8 mb-4 bg-white rounded shadow-lg"
+                            class="mb-4 rounded bg-white px-8 pt-6 pb-8 shadow-lg"
                      >
                             <div class="mb-4">
                                    <label
-                                          class="block mb-2 text-sm font-bold text-gray-700"
+                                          class="mb-2 block text-sm font-bold text-gray-700"
                                           for="id"
                                           >Username</label
                                    >
@@ -22,7 +22,7 @@
                             </div>
                             <div class="mb-6">
                                    <label
-                                          class="block mb-2 text-sm font-bold text-gray-700"
+                                          class="mb-2 block text-sm font-bold text-gray-700"
                                           for="pw"
                                           >Password</label
                                    >
@@ -36,14 +36,14 @@
                             </div>
                             <div class="flex items-center justify-between">
                                    <button
-                                          class="btn btn-outline btn-accent hover:-translate-y-1 hover:rounded-none hover:scale-110 hover:bg-indigo-500 ease-in-out duration-[200ms]"
+                                          class="btn btn-outline btn-accent duration-[200ms] ease-in-out hover:-translate-y-1 hover:scale-110 hover:rounded-none hover:bg-indigo-500"
                                           type="submit"
                                    >
                                           Sign In
                                    </button>
                             </div>
                      </form>
-                     <p class="text-xs text-center text-gray-500">
+                     <p class="text-center text-xs text-gray-500">
                             &copy;aaaaaaaaaa
                      </p>
               </div>
