--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html class="scroll-smooth">
        <head>
               <link rel="stylesheet" href="css/main.css" />
-              <div class="bg-slate-900">
-                     <meta
-                            name="viewport"
-                            content="width=device-width, initial-scale=1, user-scalable=yes"
-                            charset="utf-8"
-                     />
-                     <title>HI</title>
-                     <script type="text/javascript"></script>
-                     <h1 class="font-extrabold text-slate-300">OwO</h1>
+              <div class="space-y-5">
+                     <div class="bg-slate-300 dark:bg-slate-900">
+                            <meta
+                                   name="viewport"
+                                   content="width=device-width, initial-scale=1, user-scalable=yes"
+                                   charset="utf-8"
+                            />
+                            <title>HI</title>
+                            <script type="text/javascript"></script>
+                            <!--https://daisyui.com/components/navbar/-->
+                            <div
+                                   class="navbar rounded-br rounded-bl bg-slate-300 backdrop-blur backdrop-filter dark:bg-slate-900"
+                            >
+                                   <div class="flex-none">
+                                          <button
+                                                 class="btn btn-square btn-ghost"
+                                          >
+                                                 <svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        fill="none"
+                                                        viewBox="0 0 24 24"
+                                                        class="inline-block h-5 w-5 stroke-current"
+                                                 >
+                                                        <path
+                                                               stroke-linecap="round"
+                                                               stroke-linejoin="round"
+                                                               stroke-width="2"
+                                                               d="M4 6h16M4 12h16M4 18h16"
+                                                        ></path>
+                                                 </svg>
+                                          </button>
+                                   </div>
+                                   <div class="flex-1">
+                                          <a
+                                                 class="btn btn-ghost text-xl normal-case"
+                                                 >daisyUI</a
+                                          >
+                                   </div>
+                                   <div class="flex-none">
+                                          <button
+                                                 class="btn btn-square btn-ghost"
+                                          >
+                                                 <svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        fill="none"
+                                                        viewBox="0 0 24 24"
+                                                        class="inline-block h-5 w-5 stroke-current"
+                                                 >
+                                                        <path
+                                                               stroke-linecap="round"
+                                                               stroke-linejoin="round"
+                                                               stroke-width="2"
+                                                               d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
+                                                        ></path>
+                                                 </svg>
+                                          </button>
+                                   </div>
+                            </div>
+                     </div>
               </div>
        </head>
        <body></body>
